--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "rootDir": "./src",
     "outDir": "./dist", 
     "lib": ["ESNext"], 
+    "target": "ESNext",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
     "strict": false,
     "sourceMap": true,
     "esModuleInterop": true,
