--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "REST API's con Express y TS",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node ./src/index.ts"
+    "dev": "nodemon --exec ts-node ./src/index.ts",
+    "test": "jest --detectOpenHandles"
   },
   "author": "Pablo De La Cruz",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/supertest": "^6.0.2",
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
