--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "valibot": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
