--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.11.4",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
