--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "sonner": "^1.7.0",
-    "valibot": "^1.0.0-beta.7"
+    "valibot": "^1.0.0-beta.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
